--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,11 @@
+<h1>My Heroes</h1>
+
+<ul>
+  <li *ngFor="let hero of heroes">
+    <span>{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+
 <h2>{{hero.name | uppercase}} Details</h2>
 <div><span>id: </span>{{hero.id}}</div>
 <div><span>name: </span>{{hero.name}}</div>
