--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,18 +1,12 @@
 <h1>Meu Clã</h1>
 
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+  <li
+  *ngFor="let hero of heroes"
+  [class.selected]="hero === selectedHero"
+  (click)="onSelect(hero)">
     <span>{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}} Detalhes</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div><span>Nome: </span>{{selectedHero.name}}</div>
-
-  <div>
-    <label for="name">Heroi: </label>
-    <input id="name" [(ngModel)]="selectedHero.name" placeholder="name" type="text " />
-  </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
